-
Bug
-
Resolution: Fixed
-
Medium
-
Lustre 2.16.0, Lustre 2.17.0
-
Any environment setting up LNet
-
3
-
9223372036854775807
Chris Horn found while testing lnetctl import the following would break in that the "net type: tcp2" wasn't being properly split for packing into a Netlink packet. Everything following tcp2 was being included as the value for the key: value pair which is wrong.
- net: - net type: tcp1
local NI(s):
- interfaces: 0: eth0
CPT: "[0,1,2,3,4,5,6,7]" - net type: tcp2
local NI(s):
- interfaces:
0: eth0
CPT: "[0,1,2,3,4,5,6,7]"